src/main/fabric8/deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 17e38b8316f831fe3cfeff96cc2acc2ee89243d2
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=${project.version}
  labels:
    app: ${project.artifactId}
    provider: fabric8
    version: ${project.version}
    group: ${project.groupId}
  name: ${project.artifactId}
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: ${project.artifactId}
    provider: fabric8
    group: ${project.groupId}
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 17e38b8316f831fe3cfeff96cc2acc2ee89243d2
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=${project.version}
      labels:
        app: ${project.artifactId}
        provider: fabric8
        version: ${project.version}
        group: ${project.groupId}
    spec:
      serviceAccountName: ${project.artifactId}
      volumes:
        - name: ${project.artifactId}
          secret:
            # The secret must be created before deploying this application
            secretName: ${project.artifactId}
        - configMap:
            items:
              - key: application.properties
                path: application.properties
            name: ${project.artifactId}
          name: ${project.artifactId}

      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GREETING_PREFIX
            valueFrom:
              configMapKeyRef:
              name: ${project.artifactId}-env
              key: greeter.prefix
        image: ${project.artifactId}:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8081
          name: health
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
        volumeMounts:
          - mountPath: /etc/secrets/${project.artifactId}
            name: ${project.artifactId}
            readOnly: true
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: ${project.artifactId}:latest
    type: ImageChange
