src/main/fabric8/spring-boot-camel-swagger-ui-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 17e38b8316f831fe3cfeff96cc2acc2ee89243d2
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=0.0.1-SNAPSHOT
  labels:
    app: spring-boot-camel-swagger-ui
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat
  name: spring-boot-camel-swagger-ui
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    app: spring-boot-camel-swagger-ui
    provider: fabric8
    group: com.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 17e38b8316f831fe3cfeff96cc2acc2ee89243d2
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=0.0.1-SNAPSHOT
      labels:
        app: spring-boot-camel-swagger-ui
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.redhat
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-boot-camel-swagger-ui:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-boot-camel-swagger-ui:latest
    type: ImageChange
