src/main/fabric8/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/git-commit: e1df4a1577891c6cef73f502c39bb807bfc38d53
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      prometheus.io/scrape: "true"
      prometheus.io/port: "9779"
    labels:
      expose: "true"
      app: spring-boot-camel-swagger-ui
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.redhat
    name: spring-boot-camel-swagger-ui
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: spring-boot-camel-swagger-ui
      provider: fabric8
      group: com.redhat
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-commit: e1df4a1577891c6cef73f502c39bb807bfc38d53
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=0.0.1-SNAPSHOT
    labels:
      app: spring-boot-camel-swagger-ui
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.redhat
    name: spring-boot-camel-swagger-ui
  spec:
    replicas: 2
    revisionHistoryLimit: 2
    selector:
      app: spring-boot-camel-swagger-ui
      provider: fabric8
      group: com.redhat
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: e1df4a1577891c6cef73f502c39bb807bfc38d53
          fabric8.io/iconUrl: img/icons/camel.svg
          fabric8.io/git-branch: master
          fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=spring-boot-camel-swagger-ui&var-version=0.0.1-SNAPSHOT
        labels:
          app: spring-boot-camel-swagger-ui
          provider: fabric8
          version: 0.0.1-SNAPSHOT
          group: com.redhat
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: spring-boot-camel-swagger-ui:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: spring-boot-camel-swagger-ui:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      app: spring-boot-camel-swagger-ui
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.redhat
    name: spring-boot-camel-swagger-ui
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: spring-boot-camel-swagger-ui
