src/main/fabric8/route.health.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: ${project.artifactId}
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat
  name: health-route
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: ${project.artifactId}
