src/main/fabric8/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: ${project.artifactId}
    provider: fabric8
    version: ${project.version}
    group: ${project.groupId}
  name: ${project.artifactId}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
