src/main/fabric8/spring-boot-camel-swagger-ui-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: spring-boot-camel-swagger-ui
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat
  name: spring-boot-camel-swagger-ui
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot-camel-swagger-ui
